--- a/221111.md
+++ b/221111.md
@@ -2,22 +2,34 @@
 
 Q1. for each문의 간단한 예제 코드를 작성하시오.
 
-
-
-
-
-
-
-
-
-
-
+Q2. 문자 찾기 문제 푸는 흐름
 
 
 * * *
 
 A1. 
-```        String[] x = {"어둠", "빛", "사랑"};
+```       String[] x = {"어둠", "빛", "사랑"};
         for (String ee : x) {
             System.out.println("세상엔 " + ee + "이 공존한다.");
         }
+```
+A2. *(이렇게까지 자세히 안 써도 되지만 우선은 초보고 자세하게 논리적인 흐름이 요구되는 시기니까 자세히 적습니다.*
+
+*실력이 오르거나 굳이 설명이 필요없어질 시기가 되면 점차 세부적인 설명글은 줄여나갈 것으로 예상됩니다.)*
+
+우선 메인을 만들자. 매소드가 스태틱이 아니니까 클래스에 대한 객체생성을 한다. Main T = new Main();
+
+다음 키보드값을 입력받기 위한 스캐너를 생성한다.
+
+다음 문자나 문자열을 받아드릴 객체가 있어야 한다. 예로 String x = sc.next();
+
+스트링을 인덱스로 접근해야 하는데 이것은 Char c = sc.next().charAt(0);
+
+받아들였으면 솔루션을 호출해야 한다. System.out.print(T.solution(x, c));
+
+
+여기서 솔루션 메소드는 각자가 받아드릴 값의 유형을 넣는다. solution(String x, char t))
+
+아래 정답 값을 저장할 곳을 만든다. int answer = 0; (유형에 따라 변함)
+
+이 정답 메서드는  정답 answer을 리턴한다. return answer;
