--- a/221112.md
+++ b/221112.md
@@ -2,7 +2,18 @@
 
 Q1. 대소문자 변환
 
+Q2. 문장 속 단어
+
 
 * * *
 
-A1. 
+A1.
+
+스트링을 문자배열로 변환하려면? .toCharArray()
+
+만약 char로 변환된 이 캐릭터가 소문자냐? if(Character.isLowerCase(x))
+
+아니라면 answer를 증가시키는데 대문자로 바꿔 축적한다. answer+=Character.toUpperCase(x)
+
+A2.
+
