--- a/221112.md
+++ b/221112.md
@@ -1,8 +1,10 @@
-## 학습일자. 20221112
+## 학습일자. 20221112~20221114
 
 Q1. 대소문자 변환
 
 Q2. 문장 속 단어
+
+Q3. 단어 뒤집기
 
 
 * * *
@@ -16,4 +18,37 @@ A1.
 아니라면 answer를 증가시키는데 대문자로 바꿔 축적한다. answer+=Character.toUpperCase(x)
 
 A2.
+긴 단어를 찾아야 하고 최대값으로 갱신을 해야 하니까 처음에는 가장 작은 값으로 초기화 시킨다. int m = Integer.MIN_VALUE;
 
+스트링 배열 s를 만든다. 이걸 띄어쓰기로 구분한다. String [] s = str.split(' ');
+
+조건
+```
+for(String x : s){
+    int len = x.length();
+    if(len > m ){
+      m = len;
+      answer=x;
+```
+
+A3.
+
+솔루션 받기 전에 스트링을 입력받고 입력받은 값을 배열화 시킨다. String[] str = new String[n];
+
+이 배열 str의 단어 n을 str형 배열 i에 한 번씩 넣는다. str[i] = kb.next();
+
+포 이치 구문으로 솔루션으로 넘긴다. for (String x : T.solution(n, str))
+
+받은 솔루션은 배열이니까
+```
+public ArrayList<String> solution(int n, String[] str)
+      ArrayList<String> answer = new ArrayList<>();
+```
+n이 넘어왔지만 그냥 for each문을 쓰자.
+```
+for(String x : str){
+    String tmp = new StringBuilder(x).reverse().toString();
+    answer.add(tmp);
+    }
+```
+어레이리스트에 추가하는 것은 add를 붙인다.
