--- a/221112.md
+++ b/221112.md
@@ -6,6 +6,14 @@ Q2. 문장 속 단어
 
 Q3. 단어 뒤집기
 
+Q4. if문 기본 형식(열고 닫기)
+
+### Bonus.
+
+char형을 표현할때에는 큰 따옴표가 아니라 홀 따옴표를 사용해야한다.
+
+기초문법은 중요하다. 꼭 예시 하나쯤은 통으로 외우자 (하루 1문법?)
+
 
 * * *
 
@@ -53,3 +61,8 @@ for(String x : str){
     }
 ```
 어레이리스트에 추가하는 것은 add를 붙인다.
+
+A4.
+
+```
+
