--- a/221112.md
+++ b/221112.md
@@ -65,4 +65,11 @@ for(String x : str){
 A4.
 
 ```
-
+            if(a == 3) {
+                System.out.print("3이 아닌 값을 받음");
+            }else if(a == 4) {
+                System.out.print("이 값은 4입니다.");
+            }else {
+                System.out.print("3과 4가 아닌 값을 받음");
+            }
+  ```
