--- a/221115.md
+++ b/221115.md
@@ -12,6 +12,7 @@ i는 2의 배수 또는 3의 배수이다
 i는 2의 배수 또는 3의 배수지만 6의 배수는 아니다
 문자 ch는 숫자('0'~'9')이다
 ```
+Q3. 케이스문 기본 만들기 (계절 묻기)
 
 
 * * *
@@ -27,3 +28,19 @@ i%2==0 || i%3==0
 (i%2==0 || i%3==0) && i%6!=0
 '0' <= ch && ch <= '9'
 ```
+A3.
+```
+            switch(month) {
+                
+                case 3: case 4: case 5:
+                System.out.println("이 달은 봄입니다.");
+                    break;
+                case 6: case 7: case 8:
+                    System.out.println("이 달은 여름입니다.");
+                    break;
+                case 9: case 10: case 11:
+                    System.out.println("이 달은 가을입니다.");
+                    break;
+                default:
+                    System.out.println("이 달은 겨을입니다.");
+                    }
